Closed Bug 823279 Opened 13 years ago Closed 13 years ago

Error: Error: Permission denied to access property ... ,HTML5 video fails to initialize if browser quit several times with opened the HTML5 video page

Categories

(Core :: XPConnect, defect)

20 Branch
x86
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla20
Tracking Status
firefox20 + verified

People

(Reporter: alice0775, Assigned: bholley)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

Build Identifier: http://hg.mozilla.org/mozilla-central/rev/bfd85c9652fa Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20121219 Firefox/20.0 ID:20121219030847 deleting startupCache fixes the problem. Steps to reproduce: 1. Create new profile and Start Browser with the profile 2. Set media.windows-media-foundation.enabled to true in about:config 3. Restart Browser 4. Open Error Console (Ctrl+Shift+J) 5. Open http://www.quirksmode.org/html5/tests/video.html and Wait for page loading completion 6. Repeat step 3-5 four times Actual results: All HTML5 videos can not play back. Error: Error: Permission denied to access property 'getAttribute' Source file: chrome://global/content/bindings/scale.xml Line: 90 ---------- Error: Error: Permission denied to access property 'Utils' Source file: chrome://global/content/bindings/videocontrols.xml Line: 116 ---------- Error: Error: Permission denied to access property 'getAttribute' Source file: chrome://global/content/bindings/scale.xml Line: 90 ---------- Error: Error: Permission denied to access property 'Utils' Source file: chrome://global/content/bindings/videocontrols.xml Line: 116 ---------- Error: Error: Permission denied to access property '_setIntegerAttribute' Source file: chrome://global/content/bindings/scale.xml Line: 53 Expected results: All HTML5 videos should be able to play back. There should not be any error.
Regression window(m-c) Good: http://hg.mozilla.org/mozilla-central/rev/edd45de440ba Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20121213 Firefox/20.0 ID:20121213030751 Bad: http://hg.mozilla.org/mozilla-central/rev/9db79b97abbb Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20121213 Firefox/20.0 ID:20121213075622 Pushlog; http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=edd45de440ba&tochange=9db79b97abbb Regression window(m-i) Good: http://hg.mozilla.org/integration/mozilla-inbound/rev/c4b354cd4b98 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20121212 Firefox/20.0 ID:20121212170621 Bad: http://hg.mozilla.org/integration/mozilla-inbound/rev/1001e245b6ba Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20121212 Firefox/20.0 ID:20121212171021 Pushlog; http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=c4b354cd4b98&tochange=1001e245b6ba Suspected: Bug 818716
Blocks: 818716
Keywords: regression
Version: Trunk → 20 Branch
Component: Video/Audio → XPConnect
Summary: Error: Error: Permission denied to access property ... ,HTML5 video fails to initialize any more if browser quit several times with opened the HTML5 video page → Error: Error: Permission denied to access property ... ,HTML5 video fails to initialize if browser quit several times with opened the HTML5 video page
Looks like XBL code read in from the XUL prototype cache doesn't properly get marked as XBL. Patch coming up.
Attachment #694155 - Flags: review?(bzbarsky)
Thanks Alice :-)
Assignee: nobody → bobbyholley+bmo
Comment on attachment 694155 [details] [diff] [review] Mark deserialized XBL script as XBL. v1 r=me
Attachment #694155 - Flags: review?(bzbarsky) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
User Agent: Mozilla/5.0 (Windows NT 6.1; rv:20.0) Gecko/20100101 Firefox/20.0 Reproduced this issue with Nightly from 2012-12-19 (Build ID: 20121219030847), I have encountered the same errors in console as in comment 0. Verified as fixed on Firefox 20 beta 7 (Build ID: 20130325214615) - no errors in console.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: