Bug 823279 - Mark deserialized XBL script as XBL. r=bz